[gd_scene load_steps=2 format=3 uid="uid://br7736l58red2"]

[ext_resource type="Script" uid="uid://l6nn13d8mt60" path="res://scenes/animation_editor.gd" id="1_48i7a"]

[node name="AnimationEditor" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
offset_right = 279.0
offset_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 8
script = ExtResource("1_48i7a")

[node name="AnimNameOptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="AnimTargetOptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
min_value = -0.5
max_value = 1.5
step = 0.1
value = 0.5
alignment = 1

[node name="RemoveAnimButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"
